tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KaaamiHaaaamiHA-AAAAAAAAAAAAAAAAAAAAGA==__Ichorium-AAAAAAAAAAAAAAAAAAABQA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 320,
  "prerequisites": [
    309
  ],
  "properties": {
    "auto_claim": false,
    "desc": "By combining ichor with some void metal and osmiridium, the metal turned into something new; Something extremely durable but also soft. Its magic conductivity is incredible!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ichorium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    309
  ],
  "rewards": [],
  "tasks": []
}
