tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KaaamiHaaaamiHA-AAAAAAAAAAAAAAAAAAAAGA==__JourneytotheCent-AAAAAAAAAAAAAAAAAAAJag==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2410,
  "prerequisites": [
    327
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After acquiring your new pickaxe and clearing away a mountain or two, you wonder if maybe you should go...§odeeper§r. After trying it out on some Bedrock, you see a way down into the very depths of the planet. After exploring this new realm you make a note that it is:\n\nA) Seemingly empty of life\nB) Full of Bedrock you need to clear away with your new pickaxe\nC) Full of ore veins going up and down\nD) Some of these ores are strange and §odifferent§r from the ones you are used to\nE) Since Miners cannot break Bedrock, if you wish to use one, you'll have to do it for it first.\nF) After leaving you wake up on the surface somewhere nearby, your lack of memories of such is probably due to Oxygen deprivation. §oProbably§r. (After leaving the Bedrock Dim, you'll be thrown out somewhere nearby on what is hopefully the surface, and not inside a block, but no guarantees!)\n\nAmong the ore samples you seem to have brought back with you, you find a number of \"basic\" and \"intermediate\" ores and gems, as well as a few you don't recognize! Perhaps a return trip is in order?\n\nAlso, you seem to smell like cheese for some reason?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Journey to the Center of the Earth",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    327
  ],
  "rewards": [],
  "tasks": []
}
