tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KaaamiHaaaamiHA-AAAAAAAAAAAAAAAAAAAAGA==__PurgeAllYourWarp-AAAAAAAAAAAAAAAAAAAEVg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1110,
  "prerequisites": [
    1109
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Did you ever have a dream where you could purge all your warp with no bad side effects? This purification talisman will let your dreams come true. It gets rid of it a little at a time, so no effects!\n\nDon't forget to wear it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Purge All Your Warp",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1109
  ],
  "rewards": [],
  "tasks": []
}
