tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KaaamiHaaaamiHA-AAAAAAAAAAAAAAAAAAAAGA==__ShardsofOpposite-AAAAAAAAAAAAAAAAAAABNQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 309,
  "prerequisites": [
    307
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This morning, you just wanted to facepalm yourself to death. During your past journeys, you have already seen strangely colored shards. But unlike the primal shards you use every day, these seem to contain the raw essence of their dimension. Heaven and Hell... so to speak. Two opposite worlds.\n\nYou think you can use them to make something...powerful.\n\n[note]PS: Yes, I know the pearl isn't actually required for these crafts, just roll with it for story reasons, OK?[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Shards of Opposite Worlds",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    307
  ],
  "rewards": [],
  "tasks": []
}
