tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KaaamiHaaaamiHA-AAAAAAAAAAAAAAAAAAAAGA==__ThePowerofGods-AAAAAAAAAAAAAAAAAAABMw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 307,
  "prerequisites": [
    284
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The pearl you've found has some interesting effects on you. Not only are the voices almost gone, somehow it has also expanded your perception. You can \"feel\" the magic around you. This is definitely worth some further investigation.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Power of Gods",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    284
  ],
  "rewards": [],
  "tasks": []
}
