tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KaaamiHaaaamiHA-AAAAAAAAAAAAAAAAAAAAGA==__TheseItemsWillNo-AAAAAAAAAAAAAAAAAAALRw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2887,
  "prerequisites": [
    307
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One of the more useful things you can do with the pearl is to make a better Alchemical Furnace. You can melt items into essentia way faster with this.\n\n[note]The pearl is not used up, nor does it take durability damage from this craft.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "These Items Will Not 'Be Back'",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    307
  ],
  "rewards": [],
  "tasks": []
}
